# OOP_PROJECT_HAI

./: CMakeLists.txt  Main.cpp
Class/: Course.h  Date.h  Programme.h  Staff.h  Student.h
OlderClasses/: Admin.h  Customer.h  User.h
Utility/: AdminUtil.h  StaffUtil.h  StudentUtil.h  Utility.h
